Changed parser(not completed) and SearchActivity(edittext listener added)

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -28,7 +28,10 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/text"
                 android:textColor="@color/gray"
-                android:layout_weight="9"/>
+                android:layout_weight="9"
+                android:inputType="textAutoCorrect"
+                android:focusableInTouchMode="true"
+                android:cursorVisible="true"/>
 
             <ImageButton
                 android:id="@+id/btn_search"
@@ -53,6 +56,12 @@
             android:layout_height="match_parent"
             android:text="@string/no_records"
             android:textColor="@color/gray"
+            />
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             />
     </LinearLayout>
 
