--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -2,10 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     android:paddingTop="0dp"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingBottom="8dp"
     tools:context=".SearchActivity"
     android:background="@color/black"
     >
@@ -29,13 +29,14 @@
                 android:layout_weight="9"
                 android:hint="@string/text"
                 android:textColor="@color/gray"
-                android:inputType="textAutoCorrect"/>
+                android:inputType="textAutoCorrect"
+                />
 
             <ImageButton
                 android:id="@+id/btn_search"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:src="@android:drawable/ic_menu_search"
                 android:background="@color/blue"/>
         </LinearLayout>
