--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -30,6 +30,7 @@
                 android:hint="@string/text"
                 android:textColor="@color/gray"
                 android:inputType="textAutoCorrect"
+                android:cursorVisible="true"
                 />
 
             <ImageButton
