--- a/app/src/main/res/layout/activity_full_info.xml
+++ b/app/src/main/res/layout/activity_full_info.xml
@@ -126,7 +126,7 @@
                     android:layout_weight="1"
                     android:background="@color/blue"
                     android:text="Купить"
-                    android:src="@android:drawable/ic_menu_add"
+                    android:src="@android:drawable/ic_input_add"
                     android:textColor="@color/black"
                     />
 
@@ -137,7 +137,7 @@
                     android:layout_weight="1"
                     android:background="@color/blue"
                     android:text="Добавить в избранное"
-                    android:src="@android:drawable/ic_menu_share"
+                    android:src="@android:drawable/star_big_on"
                     android:textColor="@color/black"
                     />
 
@@ -148,7 +148,7 @@
                     android:layout_weight="1"
                     android:background="@color/blue"
                     android:text="Полное описание"
-                    android:src="@android:drawable/ic_menu_info_details"
+                    android:src="@android:drawable/ic_dialog_info"
                     android:textColor="@color/black"
                     />
 
@@ -179,9 +179,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/text_of_description"
+                    android:text="@string/text_of_descr"
                     android:textSize="13sp"
                     android:maxLines="7"
                     android:ellipsize="end"
