Added one more attribute of BookObject. Added action listeners of the FullInfoActivity Changed parser a bit

--- a/app/src/main/res/layout/activity_full_info.xml
+++ b/app/src/main/res/layout/activity_full_info.xml
@@ -180,7 +180,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/text_of_descr"
+                    android:text="@string/text_sample_descr"
                     android:textSize="13sp"
                     android:maxLines="7"
                     android:ellipsize="end"
