--- a/app/src/main/res/layout/activity_full_info.xml
+++ b/app/src/main/res/layout/activity_full_info.xml
@@ -26,9 +26,10 @@
 
                 <ImageView
                     android:id="@+id/image_cover"
-                    android:layout_width="80dp"
+                    android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:src="@android:drawable/ic_dialog_info"
+                    android:scaleType="centerInside"
                     />
 
                 <LinearLayout
@@ -41,9 +42,10 @@
                         android:id="@+id/text_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="23sp"
+                        android:textSize="20sp"
                         android:text="@string/name_of_book_value"
                         android:textColor="@color/blue"
+                        android:scrollHorizontally="true"
                         />
 
                     <TextView
@@ -64,7 +66,7 @@
                             android:id="@+id/text_language"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="13sp"
+                            android:textSize="14sp"
                             android:text="@string/language"
                             android:textColor="@color/gray"
                             />
@@ -73,7 +75,7 @@
                             android:id="@+id/text_language_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="13sp"
+                            android:textSize="14sp"
                             android:text="@string/text_language_value"
                             android:textColor="@color/white"
                             />
@@ -89,7 +91,7 @@
                             android:id="@+id/text_category_of_book"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="13sp"
+                            android:textSize="14sp"
 
                             android:text="@string/category_of_book"
                             android:textColor="@color/gray"
@@ -99,12 +101,26 @@
                             android:id="@+id/text_category_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="13sp"
+                            android:textSize="14sp"
                             android:text="@string/text_category_of_book_value"
                             android:textColor="@color/white"
                             />
                         </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/text_cost_value"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="17sp"
+                            android:text="@string/cost_value"
+                            android:textColor="@color/white"
+                            />
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -181,7 +197,7 @@
                     android:layout_marginTop="15dp"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="@string/text_sample_descr"
-                    android:textSize="13sp"
+                    android:textSize="14sp"
                     android:maxLines="7"
                     android:ellipsize="end"
                     android:textColor="@color/gray"
