--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/image_book_cover"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:scaleType="centerInside"
         />
 
@@ -22,16 +22,16 @@
             android:id="@+id/text_book_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColorHint="@color/blue"
+            android:textSize="17sp"
+            android:textColor="@color/blue"
             />
 
         <TextView
             android:id="@+id/text_book_author"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="13sp"
-            android:textColorHint="@color/gray"
+            android:textSize="14sp"
+            android:textColor="@color/gray"
             />
 
     </LinearLayout>
