--- a/app/src/main/res/layout/activity_full_info.xml
+++ b/app/src/main/res/layout/activity_full_info.xml
@@ -18,6 +18,23 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+
+            <TextView
+                android:id="@+id/text_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="@string/name_of_book_value"
+                android:textColor="@color/blue"
+                android:singleLine="true"
+                android:lines="1"
+                android:scrollHorizontally="true"
+                android:ellipsize="marquee"
+                android:textIsSelectable="true"
+                android:isScrollContainer="false"
+                android:marqueeRepeatLimit="marquee_forever"
+                />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -39,21 +56,13 @@
                     android:layout_marginLeft="15dp">
 
                     <TextView
-                        android:id="@+id/text_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="20sp"
-                        android:text="@string/name_of_book_value"
-                        android:textColor="@color/blue"
-                        android:scrollHorizontally="true"
-                        />
-
-                    <TextView
                     android:id="@+id/text_author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="17sp"
                     android:text="@string/author_of_book_value"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:textColor="@color/white"
                     />
 
@@ -103,6 +112,8 @@
                             android:layout_height="wrap_content"
                             android:textSize="14sp"
                             android:text="@string/text_category_of_book_value"
+                            android:maxLines="1"
+                            android:ellipsize="end"
                             android:textColor="@color/white"
                             />
                         </LinearLayout>
@@ -118,9 +129,19 @@
                             android:layout_height="wrap_content"
                             android:textSize="17sp"
                             android:text="@string/cost_value"
-                            android:textColor="@color/white"
+                            android:textColor="@color/red"
+                            />
+
+                        <TextView
+                            android:id="@+id/text_salecost_value"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="17sp"
+                            android:text="@string/cost_value"
+                            android:textColor="@color/green"
                             />
                     </LinearLayout>
+
 
                 </LinearLayout>
 
