--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -27,7 +27,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="9"
-                android:hint="@string/text"
+                android:hint="@string/author"
                 android:textColor="@color/gray"
                 android:inputType="textAutoCorrect"
                 android:cursorVisible="true"
@@ -50,7 +50,7 @@
             />
 
         <TextView
-            android:layout_gravity="left"
+            android:layout_gravity="center_horizontal"
             android:id="@+id/text_empty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
