--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -51,7 +51,7 @@
 
         <TextView
             android:layout_gravity="center_horizontal"
-            android:id="@+id/text_empty"
+            android:id="@+id/text_search_result"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/no_records"
